--- a/frontend/index.html
+++ b/frontend/index.html
@@ -14,6 +14,7 @@
       href="https://fonts.bunny.net/css?family=readex-pro:300,400,500,600,700"
       rel="stylesheet"
     />
+    <link rel="icon" type="image/png" href="/public/favicon.png" />
   </head>
   <body>
     <div id="root"></div>
